@@ -7,3 +7,9 @@ WriteMakefile(
 	ABSTRACT_FROM	=> 'lib/Sub/Name.pm',
 	AUTHOR		=> 'Matthijs van Duin <xmath@cpan.org>'
 );
+
+package MY;
+sub depend { "
+README : \$(VERSION_FROM)
+	pod2text \$(VERSION_FROM) > README"
+}
